--- a/app/elements/transportfee-schedule-card/transportfee-schedule-card.html
+++ b/app/elements/transportfee-schedule-card/transportfee-schedule-card.html
@@ -189,7 +189,7 @@
           temp.push(obj);
         }
         this.transportfeeinsarr=[];
-        alert(JSON.stringify(temp));
+        // alert(JSON.stringify(temp));
         this.transportfeeinsarr=temp;
         this.hideinstallmentcard=false;
         }
