date format added

--- a/app/elements/add-newstudent-card/add-newstudent-card.html
+++ b/app/elements/add-newstudent-card/add-newstudent-card.html
@@ -27,7 +27,7 @@
       </div>
       <div class="list-group col-sm-12 panel-body form-category">
         <div class="col-sm-3" style="margin-top: -1%;">
-        <dateofbirth-datepicker></dateofbirth-datepicker>
+        <transportdateofbirth-datepicker></transportdateofbirth-datepicker>
         </div>
         <div class="col-sm-3">
         <paper-dropdown-menu label="Select Grade" on-iron-select="FnSelectGrade">
