--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -314,4 +314,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="transport-pdc-report/transport-pdc-report.html">
 <link rel="import" href="transport-discount-card/transport-discount-card.html">
 <link rel="import" href="transport-discount-itemcard/transport-discount-itemcard.html">
-<link rel="import" href="transport-dashboard/transport-dashboard.html">
+<link rel="import" href="transport-dashboard/transport-dashboard.html"><link rel="import" href="transporteditreceipt-datepicker/transporteditreceipt-datepicker.html">
+<link rel="import" href="transportinstallment-date-picker/transportinstallment-date-picker.html">
+<link rel="import" href="transportreceiptdatepicker-card/transportreceiptdatepicker-card.html">
+<link rel="import" href="transportfromdate-icon-pickercard/transportfromdate-icon-pickercard.html">
+<link rel="import" href="transporttodate-icon-pickercard/transporttodate-icon-pickercard.html">
+<link rel="import" href="transportdateofbirth-datepicker/transportdateofbirth-datepicker.html">
+<link rel="import" href="transport-cheque-datepicker/transport-cheque-datepicker.html">
