--- a/app/elements/transport-editdelete-cheque-itemcard/transport-editdelete-cheque-itemcard.html
+++ b/app/elements/transport-editdelete-cheque-itemcard/transport-editdelete-cheque-itemcard.html
@@ -20,7 +20,7 @@
       <h4>EDIT/DELETE Cheques</h4>
        <div  class="layout" style='margin-left: 5%;'><paper-input required error-message="needs Cheque number!" allowed-pattern="[0-9a-zA-Z ]" id="edchequeno" label="Cheque Number" value="{{chequeno}}"> </paper-input></div>
        <div  class="layout" style='margin-left: 5%;margin-top: -2%;'> <paper-input required allowed-pattern="[a-zA-Z ]"  error-message="Requires bankName!"  id="edbankname" label="Bank Name" value="{{bankname}}"> </paper-input></div>
-       <div style="width: 100%;margin-top: -2%;margin-left: 3%;"><cheque-datepicker showdate="{{chequedate}}"></cheque-datepicker></div>
+       <div style="width: 100%;margin-top: -2%;margin-left: 3%;"><transport-cheque-datepicker showdate="{{chequedate}}"></transport-cheque-datepicker></div>
        <div class="buttons" style="margin-left: -5%;">
         <paper-button id="{{chequeno}}" class="btn btn-primary left" on-click="FnEditcheque">Save</paper-button>
         <paper-button id="{{chequeno}}" class="btn btn-primary left" on-click="FnDeletecheque">Delete</paper-button>
