--- a/app/elements/enrollment-report/enrollment-report.html
+++ b/app/elements/enrollment-report/enrollment-report.html
@@ -12,15 +12,6 @@
         <div class="well well-sm">
           <div class="row">
           <div class="col-md-12">
-          <!-- <div class="col-sm-3 enquiry-input">
-          <paper-dropdown-menu label="Admission Year" attr-for-selected="value">
-            <paper-menu id="enrollmentadmissionyear" class="dropdown-content" required on-iron-select="FnSelectAdmissionYear" valueattr="value" >
-              <template  is="dom-repeat" items="{{admissionarr}}" as="item">
-              <paper-item>{{item.admission_year}}</paper-item>
-              </template>
-            </paper-menu>
-          </paper-dropdown-menu>
-          </div> -->
           <div class="col-sm-3">
           <paper-dropdown-menu label="Academic Year" attr-for-selected="value">
             <paper-menu id="enrollmentacademicyear" class="dropdown-content" required on-iron-select="FnSelectAcademicYear" valueattr="value" >
@@ -39,11 +30,22 @@
             </paper-menu>
           </paper-dropdown-menu> 
           </div>
+          <div class="col-sm-2">
+          <paper-dropdown-menu label="Type" attr-for-selected="value">
+            <paper-menu id="enrollmenttype" class="dropdown-content" required on-iron-select="FnSelectType" valueattr="value" >
+              <!-- <template  is="dom-repeat" items="{{typearr}}" as="item"> -->
+              <paper-item value="All">All</paper-item>
+              <paper-item value="New">New</paper-item>
+              <paper-item value="Promoted">Promoted</paper-item>
+              <!-- </template> -->
+            </paper-menu>
+          </paper-dropdown-menu> 
+          </div>
           <div class="col-md-1" style="margin-top: 2.5%;margin-left: 2%;">
               <paper-button style="height:30px;text-transform: none;" on-click="FnView" class="btn btn-primary">View</paper-button>
           </div>
 
-          <div class="col-md-1" style="margin-top: 2.5%;margin-left: 30%;">
+          <div class="col-md-1" style="margin-top: 2.5%;margin-left: 20%;">
                 <p>Download
                 <a href="#">
                 <span disabled="{{disabledownload}}" class="glyphicon glyphicon-download-alt" onclick="tableToExcel('ayenrreport','Enrollment Report')"></span>
@@ -56,29 +58,14 @@
     </div>
      <table class="table table-hover" id="ayenrreport">
       <tr>
-        <th>Enquiry No</th><th>Admission No</th><th>Admission Year</th><th>Academic Year</th><th>First Name</th><th>Middle Name</th><th>Last Name</th><th>Student Name</th><th>Grade</th><th>DOB</th><th>Gender</th><th>Father Name</th><th>Mother Name</th><th>Disabled Student</th><th>Canteen availed</th><th>Transport Availed</th><th>Having Sibling</th><th>Admission Status</th><th>Active Status</th><th>Second Language</th><th>Third Language</th><th>Mother toungue</th><th>Blood Group</th><th>Father Mobile</th>
+        <th>Sno</th><th>Enquiry No</th><th>Admission No</th><th>Admission Year</th><th>Academic Year</th><th>First Name</th><th>Middle Name</th><th>Last Name</th><th>Student Name</th><th>Grade</th><th>DOB</th><th>Gender</th><th>Father Name</th><th>Mother Name</th><th>Disabled Student</th><th>Canteen availed</th><th>Transport Availed</th><th>Having Sibling</th><th>Admission Status</th><th>Active Status</th><th>Second Language</th><th>Third Language</th><th>Mother toungue</th><th>Blood Group</th><th>Father Mobile</th>
         <th>Mother Mobile</th><th>Father Email</th><th>Mother Email</th><th>Aadhar No</th><th>Caste</th><th>Flat No</th><th>Building Name</th><th>Street</th><th>Town</th><th>City</th><th>Pincode</th>
       </tr>
       <template  is="dom-repeat" items="{{enrollmentarr}}" as="e">
-      <tr><td>{{e.enquiry_no}}</td><td>{{e.admission_no}}</td><td>{{e.admission_year}}</td><td>{{e.academic_year}}</td><td>{{e.first_name}}</td><td>{{e.middle_name}}</td><td>{{e.last_name}}</td><td>{{e.student_name}}</td><td>{{e.class_for_admission}}</td><td>{{e.dob}}</td><td>{{e.gender}}</td><td>{{e.father_name}}</td><td>{{e.mother_name}}</td><td>{{e.disabled_stuent}}</td><td>{{e.canteen_availed}}</td><td>{{e.transport_availed}}</td><td>{{e.having_sibling}}</td><td>{{e.admission_status}}</td><td>{{e.active_status}}</td><td>{{e.second_language}}</td><td>{{e.third_language}}</td><td>{{e.mother_toungue}}</td><td>{{e.blood_group}}</td><td>{{e.father_mobile}}</td><td>{{e.mother_mobile}}</td><td>{{e.father_email}}</td><td>{{e.mother_email}}</td><td>{{e.aadhar_no}}</td><td>{{e.caste}}</td><td>{{e.flat_no}}</td><td>{{e.building_name}}</td><td>{{e.street}}</td><td>{{e.town}}</td><td>{{e.city}}</td><td>{{e.pincode}}</td></tr>
+      <tr><td>{{e.sno}}</td><td>{{e.enquiry_no}}</td><td>{{e.admission_no}}</td><td>{{e.admission_year}}</td><td>{{e.academic_year}}</td><td>{{e.first_name}}</td><td>{{e.middle_name}}</td><td>{{e.last_name}}</td><td>{{e.student_name}}</td><td>{{e.class_for_admission}}</td><td>{{e.dob}}</td><td>{{e.gender}}</td><td>{{e.father_name}}</td><td>{{e.mother_name}}</td><td>{{e.disabled_stuent}}</td><td>{{e.canteen_availed}}</td><td>{{e.transport_availed}}</td><td>{{e.having_sibling}}</td><td>{{e.admission_status}}</td><td>{{e.active_status}}</td><td>{{e.second_language}}</td><td>{{e.third_language}}</td><td>{{e.mother_toungue}}</td><td>{{e.blood_group}}</td><td>{{e.father_mobile}}</td><td>{{e.mother_mobile}}</td><td>{{e.father_email}}</td><td>{{e.mother_email}}</td><td>{{e.aadhar_no}}</td><td>{{e.caste}}</td><td>{{e.flat_no}}</td><td>{{e.building_name}}</td><td>{{e.street}}</td><td>{{e.town}}</td><td>{{e.city}}</td><td>{{e.pincode}}</td></tr>
       </template> 
       </table>
-      <!-- <table class="table table-hover" id="gwfeestructurereport" style="width: 140%;">
-      <tr>
-        <th>Enrollment #</th><th>Student Name</th><th>Admission Year</th><th>Academic Year</th><th>Grade</th><th>Fee Code</th><th>Fees</th>
-      </tr>
-      <tbody>
-      <template  is="dom-repeat" items="{{gradewisefeestructurearr}}" as="item">
-      <tr>
-      <td>{{item.admission_no}}</td><td>{{item.student_name}}</td>
-      <td>{{item.admission_year}}</td><td>{{item.academic_year}}</td>
-      <td>{{item.class_for_admission}}</td><td>{{item.feecode}}</td>
-      <td>{{item.fees}}</td>
-      </tr>
-      </template>
-      </tbody>
-    </table>    
- -->
+
     <fee-report-service id="feereportservice"></fee-report-service>
   </template>
   <script type="text/javascript">
@@ -98,12 +85,12 @@
   <script>
   (function() {
     'use strict';
-    var admissionyear,academicyear,grade;
+    var admissionyear,academicyear,grade,type;
     Polymer({
       is: 'enrollment-report',
-      // FnSelectAdmissionYear:function(e){
-      //   admissionyear=(e.target.selectedItem.textContent).trim();
-      // },
+      ready:function(){
+        type="All";
+      },
       FnSelectAcademicYear:function(e){
         academicyear=(e.target.selectedItem.textContent).trim();
       },
@@ -111,19 +98,23 @@
         grade=(e.target.selectedItem.textContent).trim();
       },
       callService:function(){        
-        // this.$.feereportservice.FnFetchDiscountStructureService();
+        
+      },
+      FnSelectType:function(e){
+        type=(e.target.selectedItem.textContent).trim();
       },
       FnView:function(){
-        this.$.feereportservice.FnFetchAllAdmissionService(academicyear,grade);
-        // this.$.feereportservice.FnFetchAllStudentsService(academicyear,grade);
+        this.$.feereportservice.FnFetchAllAdmissionService(academicyear,grade,type);
       },
       FnRefresh:function(){
         document.querySelector('#enrollmentacademicyear').selected=-1;
-        // document.querySelector('#gwfeestructadmissionyear').selected=-1;
         document.querySelector('#enrollmentgrade').selected=-1;
+        document.querySelector('#enrollmenttype').selected=-1;
         admissionyear="";
         academicyear="";
         grade="";
+        type="All";
+        this.enrollmentarr="";
       }
     });
   })();
